--- a/react/package.json
+++ b/react/package.json
@@ -23,10 +23,7 @@
     "storybook": "storybook dev -p 6006",
     "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
     "test": "jest",
-    "vit-dev" :"dev vite",
-    "vit-build": "tsc && vite build",
-    "vit-lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "vit-preview": "vite preview"
+    "storybook:build": "storybook build"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -44,9 +41,15 @@
     "@storybook/addon-a11y": "8.0.0-alpha.14",
     "@storybook/addon-actions": "8.0.0-alpha.14",
     "@storybook/addon-essentials": "^8.0.0-alpha.14",
+    "@storybook/addon-interactions": "8.0.0-alpha.14",
     "@storybook/addon-links": "8.0.0-alpha.14",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "8.0.0-alpha.14",
+    "@storybook/builder-vite": "^7.6.17",
     "@storybook/node-logger": "8.0.0-alpha.14",
     "@storybook/react": "^8.0.0-alpha.14",
+    "@storybook/react-vite": "8.0.0-alpha.14",
+    "@storybook/test": "8.0.0-alpha.14",
     "@types/currency-formatter": "1.5.4",
     "@types/lodash": "4.14.202",
     "@types/mini-css-extract-plugin": "~1.4.3",
@@ -65,14 +68,15 @@
     "cross-env": "7.0.3",
     "currency-formatter": "1.5.9",
     "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-storybook": "^0.8.0",
     "html-webpack-plugin": "^5.5.3",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
@@ -80,12 +84,14 @@
     "react-is": "18.2.0",
     "storybook": "8.0.0-alpha.14",
     "typescript": "~5.3.3",
+    "vite": "^5.1.4",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "~4.13.3",
     "yarn-run-all": "^3.1.1",
-    "vite": "^5.1.4"
+    "crypto-js": "^4.2.0",
+    "@types/crypto-js": "^4.2.1"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -105,14 +111,14 @@
     "notistack": "^3.0.1",
     "preact": "^10.19.3",
     "qrcode.react": "1.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
     "socket.io-client": "4.7.4",
     "stream": "^0.0.2",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
-    "xecaddrjs": "^0.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "xecaddrjs": "^0.0.1"
   },
   "husky": {
     "hooks": {
@@ -128,5 +134,10 @@
   "resolutions": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
