--- a/react/package.json
+++ b/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paybutton/react",
-  "version": "2.1.2",
+  "version": "3.0.0",
   "description": "The easiest way to accept eCash online",
   "author": "poldridge",
   "license": "MIT",
@@ -65,11 +65,11 @@
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "microbundle": "0.12.4",
-    "yarn-run-all": "^3.1.1",
     "prettier": "2.7.1",
     "react-is": "16.13.1",
     "react-scripts": "3.4.4",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "yarn-run-all": "^3.1.1"
   },
   "files": [
     "dist"
@@ -78,19 +78,19 @@
     "@material-ui/core": "4.12.4",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@material-ui/styles": "4.11.5",
-    "@types/jest": "^29.5.11",
-    "jest": "^29.7.0",
-    "crypto-js": "^4.2.0",
     "@types/crypto-js": "^4.2.1",
-    "ts-jest": "^29.1.1",
+    "@types/jest": "^29.5.11",
     "axios": "1.6.5",
     "bignumber.js": "9.0.2",
     "copy-to-clipboard": "3.3.3",
+    "crypto-js": "^4.2.0",
+    "jest": "^29.7.0",
     "lodash": "4.17.21",
     "notistack": "1.0.10",
     "qrcode.react": "1.0.1",
     "react-jss": "10.10.0",
     "socket.io-client": "4.7.4",
+    "ts-jest": "^29.1.1",
     "xecaddrjs": "^0.0.1"
   },
   "husky": {
