--- a/react/package.json
+++ b/react/package.json
@@ -8,16 +8,27 @@
     "type": "git",
     "url": "https://github.com/PayButton/paybutton.git"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.modern.js",
+  "type": "module",
+  "types": "index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
+    }
+  },
   "source": "index.tsx",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
-    "prettier": "prettier --write 'src/**/*.{ts,tsx}'",
-    "storybook": "storybook dev -p 6006",
-    "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
-    "test": "jest",
-    "storybook:build": "storybook build"
+    "lint:prettier": "prettier --write 'src/**/*.{ts,tsx}'",
+    "storybook": "storybook dev"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -44,6 +55,7 @@
     "@storybook/react": "^8.0.0-alpha.14",
     "@storybook/react-vite": "8.0.0-alpha.14",
     "@storybook/test": "8.0.0-alpha.14",
+    "@types/crypto-js": "^4.2.1",
     "@types/currency-formatter": "1.5.4",
     "@types/lodash": "4.14.202",
     "@types/mini-css-extract-plugin": "~1.4.3",
@@ -57,6 +69,7 @@
     "babel-loader": "^9.1.3",
     "concurrently": "8.2.2",
     "cross-env": "7.0.3",
+    "crypto-js": "^4.2.0",
     "currency-formatter": "1.5.9",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "9.1.0",
@@ -75,13 +88,9 @@
     "storybook": "8.0.0-alpha.14",
     "typescript": "~5.3.3",
     "vite": "^5.1.4",
-    "yarn-run-all": "^3.1.1",
-    "crypto-js": "^4.2.0",
-    "@types/crypto-js": "^4.2.1"
+    "vite-plugin-commonjs": "^0.10.1",
+    "yarn-run-all": "^3.1.1"
   },
-  "files": [
-    "dist"
-  ],
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -106,6 +115,7 @@
     "stream": "^0.0.2",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
+    "vite-plugin-dts": "^3.7.3",
     "xecaddrjs": "^0.0.1"
   },
   "husky": {
