--- a/react/package.json
+++ b/react/package.json
@@ -9,19 +9,13 @@
     "url": "https://github.com/PayButton/paybutton.git"
   },
   "type": "module",
-  "types": "index.d.ts",
   "files": [
-    "dist"
+    "dist/*",
+    "src"
   ],
-  "main": "./dist/index.umd.cjs",
-  "module": "./dist/index.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs"
-    }
-  },
-  "source": "index.tsx",
+  "main": "dist/paybutton-react.cjs.js",
+  "module": "dist/paybutton-react.es.js",
+  "source": "index.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -51,10 +45,12 @@
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "8.0.0-alpha.14",
     "@storybook/builder-vite": "^7.6.17",
+    "@storybook/manager-api": "^7.6.17",
     "@storybook/node-logger": "8.0.0-alpha.14",
     "@storybook/react": "^8.0.0-alpha.14",
     "@storybook/react-vite": "8.0.0-alpha.14",
     "@storybook/test": "8.0.0-alpha.14",
+    "@storybook/theming": "^7.6.17",
     "@types/crypto-js": "^4.2.1",
     "@types/currency-formatter": "1.5.4",
     "@types/lodash": "4.14.202",
@@ -79,6 +75,7 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
     "husky": "8.0.3",
@@ -97,7 +94,9 @@
     "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.6",
     "@mui/styles": "^5.15.6",
+    "@storybook/mdx1-csf": "^1.0.0",
     "@storybook/preset-create-react-app": "^7.6.10",
+    "@storybook/testing-library": "^0.2.2",
     "@types/jest": "^29.5.11",
     "axios": "1.6.5",
     "bignumber.js": "9.1.2",
