--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -8,19 +8,18 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "allowSyntheticDefaultImports": true,
-    "target": "esnext",
     "useDefineForClassFields": true,
+    "target": "ES2020",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "outDir": "dist",
     "module": "ESNext",
     "skipLibCheck": true,
 
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     
     /* Linting */
     "strict": true,
