--- a/paybutton/tsconfig.json
+++ b/paybutton/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2020",
     "module": "commonjs",
     "lib": ["dom", "esnext"],
-    "jsx": "react",
-    "jsxFactory": "h",
+    "paths": {
+      "react": ["./node_modules/preact/compat/"],
+      "react-dom": ["./node_modules/preact/compat/"]
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
     "isolatedModules": false,
     "strict": true,
     "esModuleInterop": true,
