--- a/react/package.json
+++ b/react/package.json
@@ -12,8 +12,8 @@
   "files": [
     "dist"
   ],
-  "main": "dist/main.js",
-  "types": "dist/main.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/lib/main.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc --p ./tsconfig-build.json && vite build",
@@ -24,8 +24,8 @@
     "storybook": "storybook dev"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.3",
@@ -59,8 +59,6 @@
     "@types/mini-css-extract-plugin": "~1.4.3",
     "@types/node": "20.11.5",
     "@types/qrcode.react": "1.0.5",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
@@ -85,8 +83,6 @@
     "mini-css-extract-plugin": "~1.6.2",
     "prettier": "3.2.4",
     "qrcode.react": "1.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-is": "18.2.0",
     "react-refresh": "^0.14.0",
     "storybook": "8.0.0-alpha.14",
@@ -106,7 +102,9 @@
     "notistack": "^3.0.1",
     "socket.io-client": "4.7.4",
     "stream": "^0.0.2",
-    "xecaddrjs": "^0.0.1"
+    "xecaddrjs": "^0.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "husky": {
     "hooks": {
@@ -128,6 +126,8 @@
     ]
   },
   "resolutions": {
-    "jackspeak": "2.1.1"
+    "jackspeak": "2.3.5",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19"
   }
 }
