--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
   "repository": "https://github.com/PayButton/paybutton.git",
   "license": "MIT",
   "scripts": {
-    "build:react":"cd react && yarn && yarn build",
+    "build:react": "cd react && yarn && yarn build",
     "build:paybutton": "cd paybutton && yarn && yarn build",
     "start:paybutton": "cd paybutton && yarn && yarn start",
-    "build":"yarn build:react && yarn build:paybutton",
-    "build:soft":"cd react && yarn build && cd ../paybutton && yarn build",
+    "build": "yarn build:react && yarn build:paybutton",
+    "build:soft": "cd react && yarn build && cd ../paybutton && yarn build",
     "start:docs": "cd docs && yarn && yarn serve",
     "clean:react": "rm -rf react/node_modules react/dist",
     "build:react:clean": "yarn clean:react && yarn build:react",
     "clean:paybutton": "rm -rf paybutton/node_modules paybutton/dist",
     "clean:app": "yarn clean:react && yarn clean:paybutton",
     "clean:build": "yarn clean:app && yarn build",
-    "start:rollup": "cd paybutton && yarn && yarn dev"
+    "start:rollup": "cd paybutton && yarn && yarn dev",
+    "start:storybook": "cd react && yarn && yarn storybook"
   }
 }
