--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -3,6 +3,10 @@
   "version": "3.0.0",
   "description": "The easiest way to accept eCash online",
   "main": "dist/paybutton.js",
+  "dependencies": {
+    "camelcase": "^8.0.0",
+    "preact": "^10.10.0"
+  },
   "devDependencies": {
     "@paybutton/react": "link:../react",
     "@rollup/plugin-alias": "^5.1.0",
@@ -13,8 +17,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-typescript": "^11.1.6",
-    "camelcase": "^8.0.0",
-    "preact": "^10.10.0",
+    "preact-jsx-runtime": "^1.2.0",
     "rollup": "^4.9.6",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-dotenv": "^0.5.0",
@@ -41,8 +44,8 @@
   ],
   "license": "MIT",
   "resolutions": {
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.19",
     "readable-stream": "^3.5.0"
   }
 }
