--- a/react/package.json
+++ b/react/package.json
@@ -8,33 +8,34 @@
     "type": "git",
     "url": "https://github.com/PayButton/paybutton.git"
   },
+  "type": "module",
   "files": [
     "dist"
   ],
-  "module": "dist/index.modern.js",
   "main": "dist/index.js",
-  "source": "index.tsx",
+  "types": "dist/lib/main.d.ts",
   "scripts": {
-    "lint": "eslint 'src/**/*.{ts,tsx}' --fix",
-    "prettier": "prettier --write 'src/**/*.{ts,tsx}'",
-    "storybook": "storybook dev -p 6006",
-    "watch": "microbundle watch --jsx React.createElement --no-compress --format modern,cjs",
-    "test": "jest",
-    "storybook:build": "storybook build"
+    "dev": "vite",
+    "build": "tsc --p ./tsconfig-build.json && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "prepublishOnly": "yarn build",
+    "lint:prettier": "prettier --write 'src/**/*.{ts,tsx}'",
+    "storybook": "storybook dev"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.22.20",
-    "@babel/eslint-parser": "^7.23.3",
-    "@babel/plugin-transform-class-properties": "^7.23.3",
-    "@babel/preset-env": "~7.22.20",
-    "@babel/preset-react": "~7.22.15",
-    "@babel/preset-typescript": "~7.22.15",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@mui/lab": "^5.0.0-alpha.162",
+    "@mui/material": "^5.15.6",
+    "@mui/styles": "^5.15.6",
     "@popperjs/core": "2.11.8",
+    "@preact/preset-vite": "^2.8.1",
     "@storybook/addon-a11y": "8.0.0-alpha.14",
     "@storybook/addon-actions": "8.0.0-alpha.14",
     "@storybook/addon-essentials": "^8.0.0-alpha.14",
@@ -43,70 +44,67 @@
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "8.0.0-alpha.14",
     "@storybook/builder-vite": "^7.6.17",
+    "@storybook/manager-api": "^7.6.17",
     "@storybook/node-logger": "8.0.0-alpha.14",
+    "@storybook/preset-create-react-app": "^7.6.10",
     "@storybook/react": "^8.0.0-alpha.14",
     "@storybook/react-vite": "8.0.0-alpha.14",
     "@storybook/test": "8.0.0-alpha.14",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^7.6.17",
+    "@types/crypto-js": "^4.2.1",
     "@types/currency-formatter": "1.5.4",
+    "@types/jest": "^29.5.11",
     "@types/lodash": "4.14.202",
     "@types/mini-css-extract-plugin": "~1.4.3",
     "@types/node": "20.11.5",
     "@types/qrcode.react": "1.0.5",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "babel-loader": "^9.1.3",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "concurrently": "8.2.2",
     "cross-env": "7.0.3",
+    "crypto-js": "^4.2.0",
     "currency-formatter": "1.5.9",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
+    "mini-css-extract-plugin": "~1.6.2",
     "prettier": "3.2.4",
+    "qrcode.react": "1.0.1",
     "react-is": "18.2.0",
+    "react-refresh": "^0.14.0",
     "storybook": "8.0.0-alpha.14",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.1",
     "typescript": "~5.3.3",
     "vite": "^5.1.4",
-    "yarn-run-all": "^3.1.1",
-    "crypto-js": "^4.2.0",
-    "@types/crypto-js": "^4.2.1"
+    "vite-plugin-commonjs": "^0.10.1",
+    "vite-plugin-dts": "^3.7.3",
+    "yarn-run-all": "^3.1.1"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/lab": "^5.0.0-alpha.162",
-    "@mui/material": "^5.15.6",
-    "@mui/styles": "^5.15.6",
-    "@storybook/preset-create-react-app": "^7.6.10",
-    "@types/jest": "^29.5.11",
     "axios": "1.6.5",
     "bignumber.js": "9.1.2",
     "copy-to-clipboard": "3.3.3",
     "crypto-js": "^4.2.0",
     "jest": "^29.7.0",
     "lodash": "4.17.21",
-    "mini-css-extract-plugin": "~1.6.2",
     "notistack": "^3.0.1",
-    "preact": "^10.19.3",
-    "qrcode.react": "1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-refresh": "^0.14.0",
     "socket.io-client": "4.7.4",
     "stream": "^0.0.2",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.1",
     "xecaddrjs": "^0.0.1"
   },
   "husky": {
@@ -120,13 +118,17 @@
       "prettier --write"
     ]
   },
-  "resolutions": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
-  },
+  "sideEffects": [
+    "**/*.css"
+  ],
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
     ]
+  },
+  "resolutions": {
+    "jackspeak": "2.3.5",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19"
   }
 }
