--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -2,6 +2,7 @@
   "name": "@paybutton/paybutton",
   "version": "3.0.1",
   "description": "The easiest way to accept eCash online",
+  "author": "Blockchain Ventures Corp.",
   "main": "dist/paybutton.js",
   "devDependencies": {
     "@paybutton/react": "link:../react",
