--- a/react/package.json
+++ b/react/package.json
@@ -2,7 +2,7 @@
   "name": "@paybutton/react",
   "version": "3.0.1",
   "description": "The easiest way to accept eCash online",
-  "author": "poldridge",
+  "author": "Blockchain Ventures Corp.",
   "license": "MIT",
   "repository": {
     "type": "git",
