--- a/paybutton/package.json
+++ b/paybutton/package.json
@@ -6,11 +6,11 @@
   "main": "dist/paybutton.js",
   "type": "module",
   "dependencies": {
+    "@paybutton/react": "link:../react",
     "camelcase": "^8.0.0",
     "preact": "^10.10.0"
   },
   "devDependencies": {
-    "@paybutton/react": "link:../react",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-html": "^1.0.3",
@@ -19,7 +19,11 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.5",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "preact-jsx-runtime": "^1.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rollup": "^4.9.6",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-dotenv": "^0.5.0",
