--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clean:react": "rm -rf react/node_modules react/dist",
     "build:react:clean": "yarn clean:react && yarn build:react",
     "clean:paybutton": "rm -rf paybutton/node_modules paybutton/dist",
-    "clean:app": "yarn clean:react && yarn clean:paybutton",
+    "clean:app": "rm -rf node_modules && yarn clean:react && yarn clean:paybutton",
     "clean:build": "yarn clean:app && yarn build",
     "start:rollup": "cd paybutton && yarn && yarn dev",
     "start:storybook": "cd react && yarn && yarn storybook"
