--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "license": "MIT",
   "scripts": {
     "dev": "cd paybutton && yarn dev",
+    "build:dev": "yarn build:react && yarn dev",
     "test": "cd react && yarn test",
     "test:coverage": "cd react && yarn test:coverage",
     "build:react": "cd react && yarn && yarn build",
     "build:paybutton": "cd paybutton && yarn && yarn build",
     "start:paybutton": "cd paybutton && yarn && yarn start",
     "build": "yarn build:react && yarn build:paybutton",
-    "build:soft": "cd react && yarn build && cd ../paybutton && yarn build",
     "start:docs": "cd docs && yarn && yarn serve",
     "clean:react": "rm -rf react/node_modules react/dist",
     "build:react:clean": "yarn clean:react && yarn build:react",
